removed bot margin from button to fix bug on iphone7

--- a/css/index.css
+++ b/css/index.css
@@ -326,6 +326,11 @@ footer .copyright {
   margin: 3rem 0;
   cursor: pointer;
 }
+@media (max-width: 667px) {
+  .top-container .top-content button {
+    margin: 3rem 0 0 0;
+  }
+}
 .mid-container {
   display: -webkit-box;
   display: -ms-flexbox;
