--- a/less/home-page.less
+++ b/less/home-page.less
@@ -62,7 +62,12 @@
             font-weight: bold;
             margin: 3rem 0;
             cursor: pointer;
+
+            @media @iphone7 {
+                margin: 3rem 0 0 0;
+            }
           }
+
     }
 }
 
